# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  minishell  minishell.h
get_next_line/: Makefile  get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
src/: main.c
src/built-in/: ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c
src/env/: check_env.c  check_env_key.c  env_path.c  get_env.c  init_env.c  set_env.c  unset_env.c
src/error/: error.c
src/exception/: parse_exception.c
src/execute/: excute_command.c  execute_redirect.c  execute_tree.c  execv_built_in.c  external.c
src/parse/: ast_free.c  full_path.c  syntax_analysis.c  syntax_check.c  syntax_make_tree.c  syntax_make_tree2.c  tokenizer.c  tokenizer_env.c  tokenizer_split.c  tokenizer_split2.c  tokenizer_type.c
src/signal/: signal.c
src/utils/: ft_env.c  ft_strcmp.c  set_status.c
